# Copyright 2021 - 2022 Universität Tübingen, DKFZ and EMBL
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
# Please adapt to package name:
name = exec_manager
version = attr: exec_manager.__version__
description = My-Microservice - a short description
url = https://github.com/ghga-de/my-microservice
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pydantic>=1.9.0

python_requires = >= 3.7

[options.entry_points]
# Please adapt to package name:
console_scripts =
    my-microservice = exec_manager.__main__:run

[options.extras_require]
dev =
    pytest==7.1.1
    pytest-asyncio==0.18.3
    pytest-cov==3.0.0
    mypy==0.942
    mypy-extensions==0.4.3
    pylint==2.13.3
    click==8.1.2
    black==22.3.0
    flake8==4.0.1
    isort==5.10.1
    bandit==1.7.4
    pre-commit==2.17.0
    requests==2.27.1
    mkdocs==1.3.0
    mkdocs-autorefs==0.4.1
    mkdocs-material==8.2.8
    mkdocs-material-extensions==1.0.3
    mkdocstrings==0.18.1
    mkdocstrings-python-legacy==0.2.2
    testcontainers[postgresql]==3.4.2
    typer==0.4.1
    sqlalchemy-utils==0.38.2
    sqlalchemy-stubs==0.4

# Please adapt: Only needed if you are using alembic for database versioning (Probably for PostgreSQL)
db_migration =
    alembic==1.6.5
    alembic-autogen-check==1.1.1

all =
    %(dev)s
    %(db_migration)s


[options.packages.find]
exclude = tests
